--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ avatar: https://avatars0.githubusercontent.com/u/10677768?v=3&s=460
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email: jma353@cornell.edu
+  email:
   facebook:
   flickr:
   github: jma353
