--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Joe Antonakakis
 
 # Short bio or description (displayed in the header)
-description: Full Stack Mobile Developer and Student at Cornell University
+description: Junior CS / ORIE Student @ Cornell University
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars0.githubusercontent.com/u/10677768?v=3&s=460
@@ -22,7 +22,7 @@ footer-links:
   facebook:
   flickr:
   github: jma353
-  instagram: 
+  instagram:
   linkedin: joseph-antonakakis-323b92a8
   pinterest:
   rss: # just type anything here for a working RSS icon
@@ -41,7 +41,7 @@ google_analytics:
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
-url: 
+url:
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
