General changes and upgrades

--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Joe Antonakakis
 description: Junior CS / ORIE Student @ Cornell University
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://avatars0.githubusercontent.com/u/10677768?v=3&s=460
+avatar: /images/fav.png
 
 #
 # Flags below are optional
