--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Joe Antonakakis
 
 # Short bio or description (displayed in the header)
-description: Junior CS / ORIE Student @ Cornell University
+description: CS @ Cornell | Incoming SWE @ Facebook
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: /images/fav.png
